--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta id="1010101">
     <title>Title</title>
 </head>
 <body>
-
+    <H1>Master page</H1>
+        <p>Master page text Master page text Master page text Master page text</p>
 </body>
 </html>
