--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,7 @@
 <body>
     <H1>Master page</H1>
         <p>Master page text Master page text Master page text Master page text</p>
+    <p>Master page text Master page text Master page text Master page text</p>
+    <p>Master page text Master page text Master page text Master page text</p>
 </body>
 </html>
